CMPS104a:  Compiler Design/asg5/92-uncomment.oc.err
<command-line>:0:2: warning: missing whitespace after the macro name [enabled by default]
92-uncomment.oc:1:1: error: unterminated comment
 /*
 ^
